# QCT

./: .gitignore  CMakeLists.txt  Login.qml  Main.qml  README.md  Singleton.h  Toast.qml  global.h  httpmgr.cpp  httpmgr.h  main.cpp  rc.qrc
